# badminton_b7g

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml  vercel.json
.codex/environments/: environment.toml
api/: [...path].py  index.py
backend/: .env.example  requirements.txt  seed.py
backend/app/: crud.py  database.py  main.py  models.py  schemas.py  serializers.py
backend/app/routes/: finals.py  list_matches.py  matches.py  players.py  referee.py  schedule.py  teams.py  ties.py  viewer.py
backend/tests/: test_api.py
docs/: B7G_Project_Encyclopedia.docx  B7G_Project_Encyclopedia.html  B7G_Project_Encyclopedia_Appendix.docx  B7G_Project_Encyclopedia_Appendix.html  PROJECT_STEP_BY_STEP.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  main.jsx  styles.css
frontend/src/pages/: Home.jsx  Match.jsx  PostFinals.jsx  Referee.jsx  Schedule.jsx  Viewer.jsx
tools/: generate_encyclopedia_doc.py
